--- a/cmd/golden/local_tf_module.yaml
+++ b/cmd/golden/local_tf_module.yaml
@@ -7,9 +7,13 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
     - ../terragrunt.hcl
     - ../terraform-another-module/*.tf*
+    - ../terraform-another-module/*.tofu*
     - ../terraform-module/*.tf*
+    - ../terraform-module/*.tofu*
     - ../terraform-module/nested-module/*.tf*
+    - ../terraform-module/nested-module/*.tofu*
   dir: terraform
 version: 3
