--- a/cmd/golden/project_marker.yaml
+++ b/cmd/golden/project_marker.yaml
@@ -7,8 +7,10 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
     - '**/*.hcl'
     - '**/*.tf*'
+    - '**/*.tofu*'
     - ../../../terragrunt.hcl
     - ../../account.hcl
     - ../region.hcl
