--- a/cmd/golden/different_workflow_names.yaml
+++ b/cmd/golden/different_workflow_names.yaml
@@ -7,12 +7,14 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
   dir: defaultWorkflow
 - autoplan:
     enabled: false
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
   dir: workflowA
   workflow: workflowA
 - autoplan:
@@ -20,6 +22,7 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
   dir: workflowB
   workflow: workflowB
 version: 3
