--- a/cmd/golden/extra_dependencies.yaml
+++ b/cmd/golden/extra_dependencies.yaml
@@ -7,6 +7,7 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
     - some_extra_dep
     - ../test_file.json
   dir: child
