--- a/cmd/golden/local_terraform_module.yaml
+++ b/cmd/golden/local_terraform_module.yaml
@@ -7,7 +7,10 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
     - ../root-module/*.tf*
+    - ../root-module/*.tofu*
     - ../terraform-module/*.tf*
+    - ../terraform-module/*.tofu*
   dir: terragrunt-module
 version: 3
