--- a/cmd/golden/parentAndChildDefinedWorkflow.yaml
+++ b/cmd/golden/parentAndChildDefinedWorkflow.yaml
@@ -7,6 +7,7 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
     - ../terragrunt.hcl
   dir: child
   workflow: workflowSpecifiedInChild
