--- a/cmd/golden/project_hcl_with_atlantis_locals.yaml
+++ b/cmd/golden/project_hcl_with_atlantis_locals.yaml
@@ -7,8 +7,10 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
     - '**/*.hcl'
     - '**/*.tf*'
+    - '**/*.tofu*'
     - ../../account.hcl
     - ../region.hcl
     - ../../arbitrary.hcl
@@ -20,8 +22,10 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
     - '**/*.hcl'
     - '**/*.tf*'
+    - '**/*.tofu*'
     - ../../account.hcl
     - ../region.hcl
   dir: non-prod/us-east-1/stage
