--- a/cmd/golden/terragrunt_dependency.yaml
+++ b/cmd/golden/terragrunt_dependency.yaml
@@ -7,12 +7,14 @@ projects:
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
   dir: dependency
 - autoplan:
     enabled: false
     when_modified:
     - '*.hcl'
     - '*.tf*'
+    - '*.tofu*'
     - ../dependency/terragrunt.hcl
   dir: depender
 version: 3
